fixed nav overlap issue

--- a/DeliciousSweets_React_Website/src/style.css
+++ b/DeliciousSweets_React_Website/src/style.css
@@ -60,6 +60,7 @@ body{
     background-size:cover;
     position: relative;
     /* width: 100%; */
+    z-index: 1; /* above everything */
 }
 
 #header .nav-menu li input{
